--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,39 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="cert">-----BEGIN CERTIFICATE-----
+MIICRTCCAeygAwIBAgIUPwLWmwFXJja8o8G5DvaJ/1e1VPUwCgYIKoZIzj0EAwIw
+cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
+EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh
+Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDIzMDQxNzAwWhcNMjUwNDIzMDQyMjAw
+WjBdMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExFDASBgNV
+BAoTC0h5cGVybGVkZ2VyMQ8wDQYDVQQLEwZjbGllbnQxDjAMBgNVBAMTBWFkbWlu
+MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEsxbUquYpiSoe286GVu6S6Wx/YZTb
+o9UxXimPBYcpRaLhgKmXbSUaoMmV+6fGZjF4kSE91oOlYLoocSXG082gzaN3MHUw
+DgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFKSQlSQ+iqxE
+yoXSA7eIp9xMD0e8MB8GA1UdIwQYMBaAFFrp7CxKYd2zTP6ui8JEc+OPI+zMMBUG
+A1UdEQQOMAyCCkNyb3RhbGFyaWEwCgYIKoZIzj0EAwIDRwAwRAIgcofzOVfJ589C
+ilZBxrC9ZGBpTfNNxB8pPs4GDJdTclcCIDaofZl6pSi5/atLSvuJDthsQ1ViR9TP
+rI4Oh73Plp6Q
+-----END CERTIFICATE-----
+</string>
+    <string name="key">-----BEGIN PRIVATE KEY-----
+MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQgypDr0/QWhsMVK088
+BRbsc3ahqp2jh9Qsu7YHorbX3p6hRANCAASzFtSq5imJKh7bzoZW7pLpbH9hlNuj
+1TFeKY8FhylFouGAqZdtJRqgyZX7p8ZmMXiRIT3Wg6VguihxJcbTzaDN
+-----END PRIVATE KEY-----</string>
+    <string name="tls_cert">-----BEGIN CERTIFICATE-----
+MIICJjCCAc2gAwIBAgIUGUyzlBv2wVukLgkUZVw6eqSdYp4wCgYIKoZIzj0EAwIw
+cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
+EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh
+Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDIzMDQxNzAwWhcNMzkwNDIwMDQxNzAw
+WjBwMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNV
+BAcTBkR1cmhhbTEZMBcGA1UEChMQb3JnMS5leGFtcGxlLmNvbTEcMBoGA1UEAxMT
+Y2Eub3JnMS5leGFtcGxlLmNvbTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABBKB
+eumzWARgmsPYim//K0TuQ0TDojU8b6QsgbjAtpJds8Vg6rgR3LpLWy7kp0zWylla
+EgeA3PvhGM04mi+AN4KjRTBDMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAG
+AQH/AgEBMB0GA1UdDgQWBBRa6ewsSmHds0z+rovCRHPjjyPszDAKBggqhkjOPQQD
+AgNHADBEAiBEgSH9xurKOnCorI/Zcb5G8I4nt58FSDfH+Vpv7JjnCQIgBOy+KOlC
+g3zVbkqVZzqos0rRzlfYEJ4XH/gmRTtJQlA=
+-----END CERTIFICATE-----
+</string>
 </resources>
