--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,39 +1,43 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="cert">-----BEGIN CERTIFICATE-----
-MIICRTCCAeygAwIBAgIUPwLWmwFXJja8o8G5DvaJ/1e1VPUwCgYIKoZIzj0EAwIw
-cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
-EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh
-Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDIzMDQxNzAwWhcNMjUwNDIzMDQyMjAw
-WjBdMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExFDASBgNV
-BAoTC0h5cGVybGVkZ2VyMQ8wDQYDVQQLEwZjbGllbnQxDjAMBgNVBAMTBWFkbWlu
-MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEsxbUquYpiSoe286GVu6S6Wx/YZTb
-o9UxXimPBYcpRaLhgKmXbSUaoMmV+6fGZjF4kSE91oOlYLoocSXG082gzaN3MHUw
-DgYDVR0PAQH/BAQDAgeAMAwGA1UdEwEB/wQCMAAwHQYDVR0OBBYEFKSQlSQ+iqxE
-yoXSA7eIp9xMD0e8MB8GA1UdIwQYMBaAFFrp7CxKYd2zTP6ui8JEc+OPI+zMMBUG
-A1UdEQQOMAyCCkNyb3RhbGFyaWEwCgYIKoZIzj0EAwIDRwAwRAIgcofzOVfJ589C
-ilZBxrC9ZGBpTfNNxB8pPs4GDJdTclcCIDaofZl6pSi5/atLSvuJDthsQ1ViR9TP
-rI4Oh73Plp6Q
------END CERTIFICATE-----
+    <string name="cert">-----BEGIN CERTIFICATE-----\n
+MIICoTCCAkegAwIBAgIUAxNf9RN84mxXVb0DFGPcVm+hNwMwCgYIKoZIzj0EAwIw\n
+cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH\n
+EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh\n
+Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDI2MDcxODAwWhcNMjUwNDI2MDcyMzAw\n
+WjBdMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExFDASBgNV\n
+BAoTC0h5cGVybGVkZ2VyMQ8wDQYDVQQLEwZjbGllbnQxDjAMBgNVBAMTBXVzZXIx\n
+MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE1/fgwvSRCVJhDZHWvfQYwZh9ziDD\n
+n1p68K/f90E7HYc1X+PSJ4rnnFd5xUKTUadupedsgRwE/Duss4stgDU9DqOB0TCB\n
+zjAOBgNVHQ8BAf8EBAMCB4AwDAYDVR0TAQH/BAIwADAdBgNVHQ4EFgQUF6bDAV1x\n
+Mlw0R3ZHhPK2r59swoswHwYDVR0jBBgwFoAUz2kNdxMNrOX/IMzAR6eJag3LsKQw\n
+FAYDVR0RBA0wC4IJQWxpc3RpbHVzMFgGCCoDBAUGBwgBBEx7ImF0dHJzIjp7Imhm\n
+LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoidXNlcjEiLCJoZi5U\n
+eXBlIjoiY2xpZW50In19MAoGCCqGSM49BAMCA0gAMEUCIQDEMheBkKEaWIofTu4J\n
+woT6ZI40UivFWZjewz9wCKMLuwIgRnWAZtYCDB33pFVPMyjKum0tBIlCqlJy1nXC\n
+9oFTbJA=\n
+-----END CERTIFICATE-----\n
 </string>
-    <string name="key">-----BEGIN PRIVATE KEY-----
-MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQgypDr0/QWhsMVK088
-BRbsc3ahqp2jh9Qsu7YHorbX3p6hRANCAASzFtSq5imJKh7bzoZW7pLpbH9hlNuj
-1TFeKY8FhylFouGAqZdtJRqgyZX7p8ZmMXiRIT3Wg6VguihxJcbTzaDN
------END PRIVATE KEY-----</string>
-    <string name="tls_cert">-----BEGIN CERTIFICATE-----
-MIICJjCCAc2gAwIBAgIUGUyzlBv2wVukLgkUZVw6eqSdYp4wCgYIKoZIzj0EAwIw
-cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH
-EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh
-Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDIzMDQxNzAwWhcNMzkwNDIwMDQxNzAw
-WjBwMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNV
-BAcTBkR1cmhhbTEZMBcGA1UEChMQb3JnMS5leGFtcGxlLmNvbTEcMBoGA1UEAxMT
-Y2Eub3JnMS5leGFtcGxlLmNvbTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABBKB
-eumzWARgmsPYim//K0TuQ0TDojU8b6QsgbjAtpJds8Vg6rgR3LpLWy7kp0zWylla
-EgeA3PvhGM04mi+AN4KjRTBDMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAG
-AQH/AgEBMB0GA1UdDgQWBBRa6ewsSmHds0z+rovCRHPjjyPszDAKBggqhkjOPQQD
-AgNHADBEAiBEgSH9xurKOnCorI/Zcb5G8I4nt58FSDfH+Vpv7JjnCQIgBOy+KOlC
-g3zVbkqVZzqos0rRzlfYEJ4XH/gmRTtJQlA=
------END CERTIFICATE-----
+    <string name="key">-----BEGIN PRIVATE KEY-----\n
+MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQggwYZ75pxnMBGYQtM\n
+TqGlWUfareZS+GHeEi1J9Y1PBQOhRANCAATX9+DC9JEJUmENkda99BjBmH3OIMOf\n
+Wnrwr9/3QTsdhzVf49IniuecV3nFQpNRp26l52yBHAT8O6yziy2ANT0O\n
+-----END PRIVATE KEY-----\n
+</string>
+    <string name="tls_cert">
+-----BEGIN CERTIFICATE-----\n
+MIICJjCCAc2gAwIBAgIUOi6DuXLNZdElLRRLH9hZ1tLnWZcwCgYIKoZIzj0EAwIw\n
+cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH\n
+EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh\n
+Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDI2MDcxODAwWhcNMzkwNDIzMDcxODAw\n
+WjBwMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNV\n
+BAcTBkR1cmhhbTEZMBcGA1UEChMQb3JnMS5leGFtcGxlLmNvbTEcMBoGA1UEAxMT\n
+Y2Eub3JnMS5leGFtcGxlLmNvbTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABBaa\n
+paGqmbUO/+3GayNH8Ym7nNuiG1QxJms/aDjiyybdp+edY8iS3O3+EpTmL5TsN58t\n
+YKaAZ44+pmvQG5jvtYajRTBDMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAG\n
+AQH/AgEBMB0GA1UdDgQWBBTPaQ13Ew2s5f8gzMBHp4lqDcuwpDAKBggqhkjOPQQD\n
+AgNHADBEAiBLbMW1i5cKCuabWNKKEWeX5BKZmGZB5ue421cFsWnGHwIgTs5GOUyM\n
+yZcgH1AR9cqbtgCVIC5t8RsJ1EksTsuWJsw=\n
+-----END CERTIFICATE-----\n
 </string>
 </resources>
