--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,43 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="cert">-----BEGIN CERTIFICATE-----\n
-MIICoTCCAkegAwIBAgIUAxNf9RN84mxXVb0DFGPcVm+hNwMwCgYIKoZIzj0EAwIw\n
-cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH\n
-EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh\n
-Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDI2MDcxODAwWhcNMjUwNDI2MDcyMzAw\n
-WjBdMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExFDASBgNV\n
-BAoTC0h5cGVybGVkZ2VyMQ8wDQYDVQQLEwZjbGllbnQxDjAMBgNVBAMTBXVzZXIx\n
-MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE1/fgwvSRCVJhDZHWvfQYwZh9ziDD\n
-n1p68K/f90E7HYc1X+PSJ4rnnFd5xUKTUadupedsgRwE/Duss4stgDU9DqOB0TCB\n
-zjAOBgNVHQ8BAf8EBAMCB4AwDAYDVR0TAQH/BAIwADAdBgNVHQ4EFgQUF6bDAV1x\n
-Mlw0R3ZHhPK2r59swoswHwYDVR0jBBgwFoAUz2kNdxMNrOX/IMzAR6eJag3LsKQw\n
-FAYDVR0RBA0wC4IJQWxpc3RpbHVzMFgGCCoDBAUGBwgBBEx7ImF0dHJzIjp7Imhm\n
-LkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoidXNlcjEiLCJoZi5U\n
-eXBlIjoiY2xpZW50In19MAoGCCqGSM49BAMCA0gAMEUCIQDEMheBkKEaWIofTu4J\n
-woT6ZI40UivFWZjewz9wCKMLuwIgRnWAZtYCDB33pFVPMyjKum0tBIlCqlJy1nXC\n
-9oFTbJA=\n
------END CERTIFICATE-----\n
-</string>
-    <string name="key">-----BEGIN PRIVATE KEY-----\n
-MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQggwYZ75pxnMBGYQtM\n
-TqGlWUfareZS+GHeEi1J9Y1PBQOhRANCAATX9+DC9JEJUmENkda99BjBmH3OIMOf\n
-Wnrwr9/3QTsdhzVf49IniuecV3nFQpNRp26l52yBHAT8O6yziy2ANT0O\n
------END PRIVATE KEY-----\n
-</string>
-    <string name="tls_cert">
------BEGIN CERTIFICATE-----\n
-MIICJjCCAc2gAwIBAgIUOi6DuXLNZdElLRRLH9hZ1tLnWZcwCgYIKoZIzj0EAwIw\n
-cDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH\n
-EwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh\n
-Lm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDI2MDcxODAwWhcNMzkwNDIzMDcxODAw\n
-WjBwMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNV\n
-BAcTBkR1cmhhbTEZMBcGA1UEChMQb3JnMS5leGFtcGxlLmNvbTEcMBoGA1UEAxMT\n
-Y2Eub3JnMS5leGFtcGxlLmNvbTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABBaa\n
-paGqmbUO/+3GayNH8Ym7nNuiG1QxJms/aDjiyybdp+edY8iS3O3+EpTmL5TsN58t\n
-YKaAZ44+pmvQG5jvtYajRTBDMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAG\n
-AQH/AgEBMB0GA1UdDgQWBBTPaQ13Ew2s5f8gzMBHp4lqDcuwpDAKBggqhkjOPQQD\n
-AgNHADBEAiBLbMW1i5cKCuabWNKKEWeX5BKZmGZB5ue421cFsWnGHwIgTs5GOUyM\n
-yZcgH1AR9cqbtgCVIC5t8RsJ1EksTsuWJsw=\n
------END CERTIFICATE-----\n
-</string>
+    <string name="cert">-----BEGIN CERTIFICATE-----\nMIICoTCCAkegAwIBAgIUAxNf9RN84mxXVb0DFGPcVm+hNwMwCgYIKoZIzj0EAwIw\ncDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH\nEwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh\nLm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDI2MDcxODAwWhcNMjUwNDI2MDcyMzAw\nWjBdMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExFDASBgNV\nBAoTC0h5cGVybGVkZ2VyMQ8wDQYDVQQLEwZjbGllbnQxDjAMBgNVBAMTBXVzZXIx\nMFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE1/fgwvSRCVJhDZHWvfQYwZh9ziDD\nn1p68K/f90E7HYc1X+PSJ4rnnFd5xUKTUadupedsgRwE/Duss4stgDU9DqOB0TCB\nzjAOBgNVHQ8BAf8EBAMCB4AwDAYDVR0TAQH/BAIwADAdBgNVHQ4EFgQUF6bDAV1x\nMlw0R3ZHhPK2r59swoswHwYDVR0jBBgwFoAUz2kNdxMNrOX/IMzAR6eJag3LsKQw\nFAYDVR0RBA0wC4IJQWxpc3RpbHVzMFgGCCoDBAUGBwgBBEx7ImF0dHJzIjp7Imhm\nLkFmZmlsaWF0aW9uIjoiIiwiaGYuRW5yb2xsbWVudElEIjoidXNlcjEiLCJoZi5U\neXBlIjoiY2xpZW50In19MAoGCCqGSM49BAMCA0gAMEUCIQDEMheBkKEaWIofTu4J\nwoT6ZI40UivFWZjewz9wCKMLuwIgRnWAZtYCDB33pFVPMyjKum0tBIlCqlJy1nXC\n9oFTbJA=\n-----END CERTIFICATE-----</string>
+    <string name="key">-----BEGIN PRIVATE KEY-----\nMIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQggwYZ75pxnMBGYQtM\nTqGlWUfareZS+GHeEi1J9Y1PBQOhRANCAATX9+DC9JEJUmENkda99BjBmH3OIMOf\nWnrwr9/3QTsdhzVf49IniuecV3nFQpNRp26l52yBHAT8O6yziy2ANT0O\n-----END PRIVATE KEY-----</string>
+    <string name="tls_cert">-----BEGIN CERTIFICATE-----\nMIICJjCCAc2gAwIBAgIUOi6DuXLNZdElLRRLH9hZ1tLnWZcwCgYIKoZIzj0EAwIw\ncDELMAkGA1UEBhMCVVMxFzAVBgNVBAgTDk5vcnRoIENhcm9saW5hMQ8wDQYDVQQH\nEwZEdXJoYW0xGTAXBgNVBAoTEG9yZzEuZXhhbXBsZS5jb20xHDAaBgNVBAMTE2Nh\nLm9yZzEuZXhhbXBsZS5jb20wHhcNMjQwNDI2MDcxODAwWhcNMzkwNDIzMDcxODAw\nWjBwMQswCQYDVQQGEwJVUzEXMBUGA1UECBMOTm9ydGggQ2Fyb2xpbmExDzANBgNV\nBAcTBkR1cmhhbTEZMBcGA1UEChMQb3JnMS5leGFtcGxlLmNvbTEcMBoGA1UEAxMT\nY2Eub3JnMS5leGFtcGxlLmNvbTBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABBaa\npaGqmbUO/+3GayNH8Ym7nNuiG1QxJms/aDjiyybdp+edY8iS3O3+EpTmL5TsN58t\nYKaAZ44+pmvQG5jvtYajRTBDMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAG\nAQH/AgEBMB0GA1UdDgQWBBTPaQ13Ew2s5f8gzMBHp4lqDcuwpDAKBggqhkjOPQQD\nAgNHADBEAiBLbMW1i5cKCuabWNKKEWeX5BKZmGZB5ue421cFsWnGHwIgTs5GOUyM\nyZcgH1AR9cqbtgCVIC5t8RsJ1EksTsuWJsw=\n-----END CERTIFICATE-----</string>
 </resources>
